    - Prevent non-numeric fields from being filled in in the hit count in the scenario form.
    - When not logged in or authentication is disabled, immediately redirect to requests overview page if the login page is visited.
    - Added delay for showing loader.
- Added the possibility to select an example when creating a stub (https://github.com/dukeofharen/httplaceholder/issues/239).

# BREAKING CHANGES
-

[1.4.2]
- Fixed a bug where HttPlaceholder would create a `.httplaceholder` folder in the user home directory even if the `fileStorageLocation` configuration value was set (https://github.com/dukeofharen/httplaceholder/issues/232).
- Added possibility for providing a list of safe IPs to HttPlaceholder for reading and using the `X-Forwarded-For`, `X-Forwarded-Host` and `X-Forwarded-Proto` headers (https://github.com/dukeofharen/httplaceholder/pull/235).
- Fixed bug where updating stub would not work anymore (https://github.com/dukeofharen/httplaceholder/pull/236).

# BREAKING CHANGES
-

[1.4.1]
- Added license and logo to Nuget packages (https://github.com/dukeofharen/httplaceholder/issues/76 and https://github.com/dukeofharen/httplaceholder/issues/81).
- Added documentation to all classes of .NET client and HttPlaceholder (https://github.com/dukeofharen/httplaceholder/pull/213).
- When setting the scenario with an empty state; set the scenario state to the default state of "Start" (https://github.com/dukeofharen/httplaceholder/pull/214).
- Added icon at stub when stub is read-only (https://github.com/dukeofharen/httplaceholder/pull/215).
- When updating stub, make sure no read-only stub exists with the same ID (https://github.com/dukeofharen/httplaceholder/pull/215).
- Updated UI so the "Disable stubs", "Enable stubs" and "Delete stubs" do not work with "read-only" stubs (https://github.com/dukeofharen/httplaceholder/pull/215).
- Created a scheduled job that is used for cleaning old requests (https://github.com/dukeofharen/httplaceholder/issues/216).